--- a/portfolio.html
+++ b/portfolio.html
@@ -845,11 +845,11 @@ html { scroll-behavior: smooth; }
 <footer>
   <div class="footer-content">
     <div class="footer-links">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-      <a href="mailto:your.email@example.com">Contact</a>
+      <a href="https://github.com/tgauri81" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/gtilloo" target="_blank">LinkedIn</a>
+      <a href="mailto:tgauri81@gmail.com">Contact</a>
     </div>
-    <p style="font-size: 14px;">© 2025 Your Name — Business Analyst Portfolio Project</p>
+    <p style="font-size: 14px;">© 2025 Gauri Tilloo — Business Analyst Portfolio Project</p>
   </div>
 </footer>
 
