--- a/portfolio.html
+++ b/portfolio.html
@@ -542,7 +542,7 @@ html { scroll-behavior: smooth; }
     <h1>FileRefresh Tool</h1>
     <p class="hero-subtitle">An automated data quality checker that eliminates stale references in reused business templates — saving time, reducing errors, and ensuring accuracy across Excel, PowerPoint, and Word files.</p>
     <div class="hero-cta">
-      <a href="file-refresh-v2.html" class="btn btn-primary">
+      <a href="file-refresh-v3.html" class="btn btn-primary">
         <span>🚀</span> Try Live Demo
       </a>
       <a href="#overview" class="btn btn-secondary">
@@ -831,7 +831,7 @@ html { scroll-behavior: smooth; }
     <h2>Ready to Try It?</h2>
     <p>Upload a file and see how FileRefresh can save you time and eliminate errors in your workflow.</p>
     <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
-      <a href="file-refresh-v2.html" class="btn btn-primary">
+      <a href="file-refresh-v3.html" class="btn btn-primary">
         <span>🚀</span> Launch Tool
       </a>
       <a href="2024_Sales_Report_Template.xlsx" class="btn btn-secondary" download>
@@ -847,11 +847,6 @@ html { scroll-behavior: smooth; }
     <div class="footer-links">
       <a href="https://github.com/tgauri81" target="_blank">GitHub</a>
       <a href="https://linkedin.com/in/gtilloo" target="_blank">LinkedIn</a>
-      <a href="mailto:tgauri81@gmail.com">Contact</a>
+      <a href="/cdn-cgi/l/email-protection#f48d9b8186da9199959d98b4918c9599849891da979b99">Contact</a>
     </div>
-    <p style="font-size: 14px;">© 2025 Gauri Tilloo — Business Analyst Portfolio Project</p>
-  </div>
-</footer>
-
-</body>
-</html>
+    <p style="font-size: 14px;">© 2025 Gauri Tilloo — Business Analyst Portfolio Pro
